--- a/appendix/coordinateSystem.tex
+++ b/appendix/coordinateSystem.tex
@@ -5,14 +5,14 @@ The geometries in the simulation are defined in their respective local coordinat
 	\begin{figure}[h]
      \centering
      \begin{subfigure}[t]{0.45\textwidth}
-             \includegraphics[trim=4.5cm 2.cm 3.5cm 1.5cm, clip, width=\linewidth]{./figures/coupling/interpolation/ellipse/localOrientation2.pdf}
+             \includegraphics[trim=4.5cm 2.cm 3.5cm 1.5cm, clip, width=\linewidth]{./figures/coupling/interpolation/ellipse/localOrientation2.png}
              \caption{Local coordinate system $[x,y]'$}
              \label{fig:localPosition2}
      \end{subfigure}%
      ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
        %(or a blank line to force the subfigure onto a new line)
      \begin{subfigure}[t]{0.45\textwidth}
-             \includegraphics[trim=4.5cm 2.cm 3.5cm 1.5cm, clip, width=\linewidth]{./figures/coupling/interpolation/ellipse/globalOrientation.pdf}
+             \includegraphics[trim=4.5cm 2.cm 3.5cm 1.5cm, clip, width=\linewidth]{./figures/coupling/interpolation/ellipse/globalOrientation.png}
              \caption{Global coordinate system $[x,y]$}
              \label{fig:globalPosition2}
      \end{subfigure}
